s/bu_shader_to_tcl_list/bu_shader_to_list/g
	renamed as it applies to any list in {} form, tcl or otherwise [7.21]
s/bu_(add|delete|call)_hook/bu_hook_\1/g
	renamed hook functions to be consistent with other libbu API [7.21]
s/bu_file_exists\(([^)]*)\)/bu_file_exists(\1, NULL)/g
	new file descriptor parameter added [7.21]
s/bu_list_path\(([^,]*),([^,]*),[[:space:]]([^)]*)\)/bu_dir_list(\1,\2, &(\3))/g
s/bu_count_path(.*)\);/bu_dir_list\1, NULL);/g
	made bu_dir_list() return the number of entries [7.21]
s/bu_strcmpm\((.*),([^,]*)\)/bu_strcmp(\1)/g
	no use for label parameter, convert to bu_strcmp() [7.21]
        bu_set_realtime() [deprecated 7.22]

7.24
----
s/bu_set_realtime([[:space:]]);//g
        didn't do anything [7.23]
s/.*bu_cpulimit_[sg]et([[:space:]]);//g
        didn't do anything [7.23]
s/rt_g\./RTG\./g
        renamed rt_g global to RTG so it doesn't match the struct name [7.24]
s/rt_functab\[/OBJ\[/g
        renamed rt_functab global to OBJ so it doesn't match the struct name [7.24]
s/redraw_vlist/draw/g
        removed redraw_vlist mged command, just call draw or refresh [7.24]
s/RT_BADNUM/INVALID/g
s/RT_BADVAL/VINVALID/g
        moved RT_BADNUM and RT_BADVEC to vmath.h as INVALID and VINVALID [7.24]
s/bu_create_hash_tbl/bu_hash_tbl_create/g
s/bu_find_hash_entry/bu_hash_tbl_find/g
s/bu_hash_add_entry/bu_hash_tbl_add/g
s/bu_hash_tbl_pr/bu_hash_tbl_print/g
	renamed for better consistency in hash table API and with other libbu API [7.24]
s/dm_applicationfocus([[:space:]]);//g
	only useful in older os x versions, users can now do the same thing via XQuartz preferences
s/bu_vls_trunc2/bu_vls_trunc/g
        removed duplicitous function in favor of more general version
s/bn_pi/M_PI/g
s/bn_twopi/M_2PI/g
s/bn_halfpi/M_PI_2/g
s/bn_quarterpi/M_PI_4/g
s/bn_invpi/M_1_PI/g
s/bn_inv2pi/M_1_2PI/g
s/bn_inv4pi/M_1_4PI)/g
s/bn_inv255/BN_INV255/g'
s/bn_degtorad/DEG2RAD/g
s/bn_radtodeg/RAD2DEG/g
        eliminated a number of libbn globals in favor of existing constants